# diffusion_policy

./: .gitignore  actions.pkl  pyproject.toml  train.py
diffusion_policy/common/: pytorch_util.py  replay_buffer.py  sampler.py
diffusion_policy/config/: train_diffusion_unet_hybrid_workspace.yaml  train_diffusion_unet_timm_unstack_workspace.yaml
diffusion_policy/config/task/: pusht_image.yaml  unstack.yaml  unstack_224.yaml
diffusion_policy/dataset/: base_dataset.py  pusht_image_dataset.py  unstack_dataset.py
diffusion_policy/env_runner/: fake_runner.py
diffusion_policy/model/common/: normalizer.py
diffusion_policy/model/diffusion/: conditional_unet1d.py  mask_generator.py
diffusion_policy/model/vision/: timm_obs_encoder.py
diffusion_policy/policy/: diffusion_transformer_hybrid_image_policy.py  diffusion_unet_hybrid_image_policy.py
diffusion_policy/workspace/: base_workspace.py  train_diffusion_transformer_timm_workspace.py  train_diffusion_unet_hybrid_workspace.py
robot/: robot_node.py  robot_node_old.py
scripts/: dino.py  dino_classify.py  img_compare.py  processor.py  sam2.1_hiera_l.yaml  sam2_.py  sam2_model.py  sam2_test.py
scripts/classification_net/: create_dataset.py  train_resnet50.py  viz_dataset.py
unstack/: 01_generate_UR5_dataset.py  data_processing.py  dataset_demo.py  downsample_dataset.py  evaluate_policy_loss.py  network_demo.py  network_fns.py  play_dataset.py  plot_actions.py  pose_trajectory_interpolator.py  test_action_diff.py  test_loading.py  test_policy.py  test_pusht.py
